begining navbar implementation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="autor" lang="fr" content="Nassir BOUREDENNA">
+    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/index.css">
     <title>Nassir B - Portfolio</title>
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <div class="burger">
+        <div class="bars"></div>
+        <div class="bars"></div>
+        <div class="bars"></div>
+    </div>
+    <nav>
+        <div class="link-bar">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="websites.html">Websites Tutorials</a>
+                </li>
+                <li>
+                    <a href="games.html">Games Tutorials</a>
+                </li>
+                <li>
+                    <a href="creation.html">My Creations</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="social-bloc">
+            <ul>
+                <li><a href="https://www.instagram.com/nassir_brdna/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
+                <li><a href="https://www.facebook.com/nassir.neymar/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/nassir-bouredenna/" target="_blank"><i class="fab fa-linkedin"></i></a></i></li>
+                <li><a href="https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
+                <li><a href="https://github.com/nassirb" target="_blank"><i class="fab fa-github-square"></i></a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
