--- a/index.html
+++ b/index.html
@@ -17,31 +17,30 @@
         <div class="link-bar">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="#header">Accueil</a>
                 </li>
                 <li>
-                    <a href="websites.html">Websites Tutorials</a>
+                    <a href="#about">À propos de moi</a>
                 </li>
                 <li>
-                    <a href="games.html">Games Tutorials</a>
+                    <a href="#parcour">Mon parcours</a>
                 </li>
                 <li>
-                    <a href="creation.html">My Creations</a>
+                    <a href="#projets">Mes réalisations</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="#contact">Me Contacter</a>
                 </li>
             </ul>
         </div>
         <div class="social-bloc">
             <ul>
                 <li><a href="https://www.instagram.com/nassir_brdna/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
-                <li><a href="https://www.facebook.com/nassir.neymar/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/nassir-bouredenna/" target="_blank"><i class="fab fa-linkedin"></i></a></i></li>
-                <li><a href="https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
                 <li><a href="https://github.com/nassirb" target="_blank"><i class="fab fa-github-square"></i></a></li>
             </ul>
         </div>
     </nav>
+    <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
 </body>
 </html>
