--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             </ul>
         </div>
     </nav>
+    <header id="header"></header>
+    <section id="about"></section>
+    <section id="parcour"></section>
+    <section id="projets"></section>
+    <section id="contact"></section>
     <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
 </body>
 </html>
