section modification with responsive no content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" lang="fr" content="Nassir BOUREDENNA">
-    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/fonts.css">
     <title>Nassir B - Portfolio</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
         <div class="bars"></div>
         <div class="bars"></div>
     </div>
+    <div class="scroll-top"><a href="#header"><img src="/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
     <nav>
         <div class="link-bar">
             <ul>
@@ -41,11 +43,21 @@
             </ul>
         </div>
     </nav>
-    <header id="header"></header>
-    <section id="about"></section>
-    <section id="parcour"></section>
-    <section id="projets"></section>
-    <section id="contact"></section>
+    <header id="header" class="central-part"></header>
+    <section id="about" class="central-part">
+        <h3 class="vertical-name">À propos de moi</h3>
+    </section>
+    <section id="parcour" class="central-part">
+        <h3 class="vertical-name">Mon Parcours</h3>
+    </section>
+    <section id="projets" class="central-part">
+        <h3 class="vertical-name">Mes réalisations</h3>
+    </section>
+    <section id="contact" class="central-part">
+        <h3 class="vertical-name">Me contacter</h3>
+    </section>
+    <footer class="central-part"></footer>
     <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
+    <script src="/js/index.js" crossorigin="anonymous"></script>
 </body>
 </html>
