--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="bars"></div>
         <div class="bars"></div>
     </div>
-    <div class="scroll-top"><a href="#header"><img src="/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
+    <div class="scroll-top"><a href="#header"><img src="https://nassirb.github.io/myPortfolio/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
     <nav>
         <div class="link-bar">
             <ul>
