--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" lang="fr" content="Nassir BOUREDENNA">
-    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/index.css">
-    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/fonts.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/fonts.css">
     <title>Nassir B - Portfolio</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="bars"></div>
         <div class="bars"></div>
     </div>
-    <div class="scroll-top"><a href="#header"><img src="https://nassirb.github.io/myPortfolio/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
+    <div class="scroll-top"><a href="#header"><img src="/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
     <nav>
         <div class="link-bar">
             <ul>
@@ -45,19 +45,19 @@
     </nav>
     <header id="header" class="central-part"></header>
     <section id="about" class="central-part">
-        <h3 class="vertical-name">À propos de moi</h3>
+        <h2 class="vertical-name">À propos de moi</h2>
     </section>
     <section id="parcour" class="central-part">
-        <h3 class="vertical-name">Mon Parcours</h3>
+        <h2 class="vertical-name">Mon parcours</h2>
     </section>
     <section id="projets" class="central-part">
-        <h3 class="vertical-name">Mes réalisations</h3>
+        <h2 class="vertical-name">Mes réalisations</h2>
     </section>
     <section id="contact" class="central-part">
-        <h3 class="vertical-name">Me contacter</h3>
+        <h2 class="vertical-name">Me contacter</h2>
     </section>
     <footer class="central-part"></footer>
     <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
-    <script src="https://nassirb.github.io/myPortfolio/js/index.js" crossorigin="anonymous"></script>
+    <script src="/js/index.js" crossorigin="anonymous"></script>
 </body>
 </html>
