adding github link to files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" lang="fr" content="Nassir BOUREDENNA">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/fonts.css">
+    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/index.css">
+    <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/fonts.css">
     <title>Nassir B - Portfolio</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="bars"></div>
         <div class="bars"></div>
     </div>
-    <div class="scroll-top"><a href="#header"><img src="/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
+    <div class="scroll-top"><a href="#header"><img src="https://nassirb.github.io/myPortfolio/images/scroll-top.png" alt="pictograme retour en haut"></a></div>
     <nav>
         <div class="link-bar">
             <ul>
@@ -58,6 +58,6 @@
     </section>
     <footer class="central-part"></footer>
     <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
-    <script src="/js/index.js" crossorigin="anonymous"></script>
+    <script src="https://nassirb.github.io/myPortfolio/js/index.js" crossorigin="anonymous"></script>
 </body>
 </html>
