adding map and links to footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,30 @@
     <section id="contact" class="central-part">
         <h2 class="vertical-name">Me contacter</h2>
     </section>
-    <footer class="central-part"></footer>
+    <footer class="central-part">
+        <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11261.19455780926!2d5.369344185904421!3d43.359965756592935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9eaa9a38d094f%3A0xdf2edfd5a1c424e2!2sLes%20Aygalades%2C%20Marseille!5e0!3m2!1sfr!2sfr!4v1635984679645!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="links-container">
+            <ul>
+                <li>
+                    <a href="#header">Accueil</a>
+                </li>
+                <li>
+                    <a href="#about">À propos de moi</a>
+                </li>
+                <li>
+                    <a href="#parcour">Mon parcours</a>
+                </li>
+                <li>
+                    <a href="#projets">Mes réalisations</a>
+                </li>
+                <li>
+                    <a href="#contact">Me Contacter</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/b817250817.js" crossorigin="anonymous"></script>
     <script src="https://nassirb.github.io/myPortfolio/js/index.js" crossorigin="anonymous"></script>
 </body>
