adding images and implementing contact section

--- a/index.html
+++ b/index.html
@@ -49,12 +49,35 @@
     </section>
     <section id="parcour" class="central-part">
         <h2 class="vertical-name">Mon parcours</h2>
-    </section>
+    </section> 
     <section id="projets" class="central-part">
         <h2 class="vertical-name">Mes réalisations</h2>
     </section>
     <section id="contact" class="central-part">
         <h2 class="vertical-name">Me contacter</h2>
+        <div class="contact-container">
+            <div class="contact-info">
+                <a id="myMail" href="mailto:nassir.bour@gmail.com">nassir.bour@gmail.com</a>
+                <button onclick="copyMail()">Copier le mail</button>
+            </div>
+            <div class="contact-cards">
+                <div class="fb">
+                    <a href="https://www.facebook.com/nassir.neymar/" target="_blank" rel="noopener noreferrer">
+                        <video src="/images/Facebook.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                    </a>
+                </div>
+                <div class="insta">
+                    <a href="https://www.instagram.com/nassir_brdna/" target="_blank" rel="noopener noreferrer">
+                        <video src="/images/Instagram.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                    </a>
+                </div>
+                <div class="linkedin">
+                    <a href="https://www.linkedin.com/in/nassir-bouredenna/" target="_blank" rel="noopener noreferrer">
+                        <img src="/images/Linkedin.jpg" alt="linkedin-card">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="central-part">
         <div class="map-container">
