correcting links to images fold

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
             <div class="contact-cards">
                 <div class="fb">
                     <a href="https://www.facebook.com/nassir.neymar/" target="_blank" rel="noopener noreferrer">
-                        <video src="/images/Facebook.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                        <video src="images/Facebook.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
                     </a>
                 </div>
                 <div class="insta">
                     <a href="https://www.instagram.com/nassir_brdna/" target="_blank" rel="noopener noreferrer">
-                        <video src="/images/Instagram.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                        <video src="images/Instagram.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
                     </a>
                 </div>
                 <div class="linkedin">
                     <a href="https://www.linkedin.com/in/nassir-bouredenna/" target="_blank" rel="noopener noreferrer">
-                        <img src="/images/Linkedin.jpg" alt="linkedin-card">
+                        <img src="images/Linkedin.jpg" alt="linkedin-card">
                     </a>
                 </div>
             </div>
