--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
         <div class="contact-container">
             <div class="contact-info">
                 <a id="myMail" href="mailto:nassir.bour@gmail.com">nassir.bour@gmail.com</a>
-                <button onclick="copyMail()">Copier le mail</button>
+                <div id="copy-btn">Copier le mail</div>
             </div>
             <div class="contact-cards">
                 <div class="fb">
                     <a href="https://www.facebook.com/nassir.neymar/" target="_blank" rel="noopener noreferrer">
-                        <video src="images/Facebook.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                        <video src="images/Facebook.mp4" type="video/mp4" autoplay="true" loop></video>
                     </a>
                 </div>
                 <div class="insta">
                     <a href="https://www.instagram.com/nassir_brdna/" target="_blank" rel="noopener noreferrer">
-                        <video src="images/Instagram.mp4" type="video/mp4" controls="false" autoplay="true" loop></video>
+                        <video src="images/Instagram.mp4" type="video/mp4" autoplay="true" loop></video>
                     </a>
                 </div>
                 <div class="linkedin">
