correcting css btn copy

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="vertical-name">Me contacter</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <a id="myMail" href="mailto:nassir.bour@gmail.com">nassir.bour@gmail.com</a>
+                <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio">nassir.bour@gmail.com</a>
                 <div id="copy-btn">Copier le mail</div>
             </div>
             <div class="contact-cards">
