correcting css btn copy and a tag style

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="contact-container">
             <div class="contact-info">
                 <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio">nassir.bour@gmail.com</a>
-                <div id="copy-btn">Copier le mail</div>
+                <span id="copy-btn">Copier</span>
             </div>
             <div class="contact-cards">
                 <div class="fb">
