correcting js func and adding favIcon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="autor" lang="fr" content="Nassir BOUREDENNA">
     <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/index.css">
     <link rel="stylesheet" href="https://nassirb.github.io/myPortfolio/css/fonts.css">
+    <link rel="icon" type="image/png" href="images/apple-touch-icon.png"/>
     <title>Nassir B - Portfolio</title>
 </head>
 <body>
