--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="contact-container">
             <div class="contact-info">
                 <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio">nassir.bour@gmail.com</a>
+                <input type="text" name="mailInput" id="mailInput" value="nassir.bour@gmail.com" hidden>
                 <span id="copy-btn">Copier</span>
             </div>
             <div class="contact-cards">
