delet clipboard functions

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
         <h2 class="vertical-name">Me contacter</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio"><p id="text">nassir.bour@gmail.com</p></a>
-                <span id="copy-btn">Copier</span>
+                <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio">nassir.bour@gmail.com</a>
             </div>
             <div class="contact-cards">
                 <div class="fb">
