--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="vertical-name">Me contacter</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio">nassir.bour@gmail.com</a>
+                <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio" target="_blank" rel="noopener noreferrer">nassir.bour@gmail.com</a>
                 <a id="myTel" href="tel:+33767972405">07 67 97 24 05</a>
                 <a id="myAdress" href="https://www.google.com/maps/dir//177+Chem.+de+Saint-Antoine+%C3%80+Saint-Joseph,+13015+Marseille/" target="_blank" rel="noopener noreferrer">177 Chem. de Saint-Antoine À Saint-Joseph, 13015 Marseille</a>
             </div>
