modification video by gif

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             <div class="contact-cards">
                 <div class="fb">
                     <a href="https://www.facebook.com/nassir.neymar/" target="_blank" rel="noopener noreferrer">
-                        <video src="images/Facebook.mp4" type="video/mp4" autoplay="true" loop></video>
+                        <img src="images/Facebook.gif"  alt="facebook-card"></img>
                     </a>
                 </div>
                 <div class="insta">
                     <a href="https://www.instagram.com/nassir_brdna/" target="_blank" rel="noopener noreferrer">
-                        <video src="images/Instagram.mp4" type="video/mp4" autoplay="true" loop></video>
+                        <img src="images/Instagram.gif"  alt="instagram-card"></img>
                     </a>
                 </div>
                 <div class="linkedin">
