modif couleur section couleur texte adresse

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="contact-container">
             <div class="contact-info">
                 <a id="myMail" href="mailto:nassir.bour@gmail.com ?subject=Contact - depuis votre Portfolio" target="_blank" rel="noopener noreferrer">nassir.bour@gmail.com</a>
-                <a id="myTel" href="tel:+33767972405">07 67 97 24 05</a>
-                <a id="myAdress" href="https://www.google.com/maps/dir//177+Chem.+de+Saint-Antoine+%C3%80+Saint-Joseph,+13015+Marseille/" target="_blank" rel="noopener noreferrer">177 Chem. de Saint-Antoine À Saint-Joseph, 13015 Marseille</a>
+                <a id="myTel" href="tel:+33767972405" rel="noopener noreferrer">07 67 97 24 05</a>
+                <br id="myAdress" href="https://www.google.com/maps/dir//177+Chem.+de+Saint-Antoine+%C3%80+Saint-Joseph,+13015+Marseille/" target="_blank" rel="noopener noreferrer">177 Chemin </br>de Saint-Antoine À Saint-Joseph, </br>13015 Marseille</a>
             </div>
             <div class="contact-cards">
                 <div class="fb">
